syntax = "proto3";
package akash.base.v1beta2;

import "gogoproto/gogo.proto";

option go_package = "github.com/akash-network/node/types/v1beta2";

// Endpoint describes a publicly accessible IP service
message Endpoint {
  option (gogoproto.equal) = true;
  // This describes how the endpoint is implemented when the lease is deployed
  enum Kind {
    // Describes an endpoint that becomes a Kubernetes Ingress
    SHARED_HTTP = 0;
    // Describes an endpoint that becomes a Kubernetes NodePort
    RANDOM_PORT = 1;
    // Describes an endpoint that becomes a leased IP
    LEASED_IP = 2;
  }
  Kind kind = 1;
  uint32 sequence_number = 2
    [(gogoproto.customname) = "SequenceNumber", (gogoproto.jsontag) = "sequence_number", (gogoproto.moretags) = "yaml:\"sequence_number\""];
}
